<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/string_main_payment_details_title" />

        <TextView
            android:id="@+id/id_main_payment_details_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/string_main_get_product_title" />

        <TextView
            android:id="@+id/id_main_product_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/string_main_toy_box_title" />

        <TextView
            android:id="@+id/id_main_toy_box_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/string_main_toy_title" />

        <TextView
            android:id="@+id/id_main_toy_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="300dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/id_main_line_pay_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/string_main_use_line_pay_buy"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/id_main_apple_pay_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/string_main_use_apple_pay_buy"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>